# material_price_control

./: .pre-commit-config.yaml  README.md  diff.txt  psychological_handbook.md  pyproject.toml  technical_handbook.md
.github/workflows/: ci.yml  linters.yml
material_price_control/: hooks.py  modules.txt
material_price_control/material_price_control/: dashboard.py  guard.py  test_guard.py  version.py
material_price_control/material_price_control/dashboard_chart/top_items_with_anomalies/: top_items_with_anomalies.json
material_price_control/material_price_control/doctype/cost_anomaly_log/: cost_anomaly_log.js  cost_anomaly_log.json  cost_anomaly_log.py
material_price_control/material_price_control/doctype/cost_valuation_rule/: cost_valuation_rule.js  cost_valuation_rule.json  cost_valuation_rule.py  test_cost_valuation_rule.py
material_price_control/material_price_control/doctype/cost_valuation_settings/: cost_valuation_settings.js  cost_valuation_settings.json  cost_valuation_settings.py  test_cost_valuation_settings.py
material_price_control/material_price_control/doctype/mpc_bypass_role/: mpc_bypass_role.json  mpc_bypass_role.py
material_price_control/material_price_control/fixtures/: custom_field.json  dashboard_chart.json  number_card.json  role.json
material_price_control/material_price_control/number_card/active_rules/: active_rules.json
material_price_control/material_price_control/number_card/open_anomalies/: open_anomalies.json
material_price_control/material_price_control/number_card/severe_anomalies/: severe_anomalies.json
material_price_control/material_price_control/page/cost_valuation_chart/: cost_valuation_chart.css  cost_valuation_chart.js  cost_valuation_chart.json
material_price_control/material_price_control/report/historical_anomaly_finder/: historical_anomaly_finder.js  (+2 more)
material_price_control/patches/: __init__.py
material_price_control/public/js/: cost_override.js
(+4 files in other folders)
